# euler.c

./: CMakeLists.txt  run
lib/: common.h  pch.h  problem.c  problem.h
src/: 1.c  2.c  3.c
